public-testnet/parachains/basilisk/parachain.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: parachain-coll-01-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: parachain-coll-01
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: parachain-coll-01
    spec:
      containers:
      - image: 601305236792.dkr.ecr.eu-west-1.amazonaws.com/basilisk:latest
        resources:
          limits:
            memory: "5000Mi"
            cpu: "3000m"
          requests:
            memory: "4000Mi"
            cpu: "3000m"
        imagePullPolicy: Always
        name: parachain-coll-01
        volumeMounts:
          - mountPath: /mnt/basilisk1
            name: basilisk1-storage 
        args: ["--chain", "/mnt/basilisk1/config/basilisk-testnet-chainspec.json", "--unsafe-ws-external", "--rpc-cors", "all", "--parachain-id", "2090", "--collator", "--base-path", "/mnt/basilisk1", "--node-key", "0000000000000000000000000000000000000000000000000000000000000009", "--keystore-path", "/mnt/basilisk1/config/keystore-c1", "--bootnodes", "/dns/coll-01-svc.default.svc.cluster.local/tcp/30333/p2p/12D3KooWQizATZJGTZSb8ShuaniCCaDCBQSczRQ38QgvWH3sJj9c", "--public-addr", "/dns/coll-01-sv [...]
        ports:
        - containerPort: 9944
        - containerPort: 9933
        - containerPort: 30333
      volumes:
        - name: basilisk1-storage
          persistentVolumeClaim:
            claimName: basilisk1-claim
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: parachain-coll-02-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: parachain-coll-02
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: parachain-coll-02
    spec:
      containers:
      - image: 601305236792.dkr.ecr.eu-west-1.amazonaws.com/basilisk:latest
        resources:
          limits:
            memory: "5000Mi"
            cpu: "3000m"
          requests:
            memory: "4000Mi"
            cpu: "3000m"
        imagePullPolicy: Always
        name: parachain-coll-02
        volumeMounts:
          - mountPath: /mnt/basilisk2
            name: basilisk2-storage
        args: ["--chain", "/mnt/basilisk2/config/basilisk-testnet-chainspec.json", "--parachain-id", "2090", "--collator", "--base-path", "/mnt/basilisk2", "--node-key", "000000000000000000000000000000000000000000000000000000000000000a", "--keystore-path", "/mnt/basilisk2/config/keystore-c2", "--bootnodes", "/dns/coll-01-svc.default.svc.cluster.local/tcp/30333/p2p/12D3KooWQizATZJGTZSb8ShuaniCCaDCBQSczRQ38QgvWH3sJj9c", "--public-addr", "/dns/coll-02-svc.default.svc.cluster.local/tcp/30333", "--", [...]
        ports:
        - containerPort: 9944
        - containerPort: 9933
        - containerPort: 30333
      volumes:
        - name: basilisk2-storage
          persistentVolumeClaim:
            claimName: basilisk2-claim
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: public-rpc-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: public-rpc
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: public-rpc
    spec:
      containers:
      - image: 601305236792.dkr.ecr.eu-west-1.amazonaws.com/basilisk:latest
        resources:
          limits:
            memory: "5000Mi"
            cpu: "3000m"
          requests:
            memory: "4000Mi"
            cpu: "3000m"
        imagePullPolicy: Always
        name: public-rpc
        volumeMounts:
          - mountPath: /mnt/basilisk-public-node
            name: parachain-public-storage
        args: ["--chain", "/mnt/basilisk-public-node/config/basilisk-testnet-chainspec.json", "--parachain-id", "2090", "--base-path", "/basilisk/", "--bootnodes", "/dns/coll-01-svc.default.svc.cluster.local/tcp/30333/p2p/12D3KooWQizATZJGTZSb8ShuaniCCaDCBQSczRQ38QgvWH3sJj9c", "--public-addr", "/dns/public-rpc-svc.default.svc.cluster.local/tcp/30333", "--ws-external", "--unsafe-ws-external", "--rpc-methods", "Unsafe", "--rpc-cors", "all", "--", "--chain", "/mnt/basilisk-public-node/config/westend [...]
        ports:
        - containerPort: 9944
      volumes:
        - name: parachain-public-storage
          persistentVolumeClaim:
            claimName: basilisk-public-claim
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: coll-01-svc
spec:
  ports:
    - port: 9944
      name: websocket
      targetPort: 9944
      protocol: TCP
    - port: 30333
      name: custom-port
      targetPort: 30333
      protocol: TCP
    - port: 9933
      name: rpc-port
      targetPort: 9933  
  type: NodePort
  selector:
    app.kubernetes.io/name: parachain-coll-01
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: coll-02-svc
spec:
  ports:
    - port: 9944
      name: websocket
      targetPort: 9944
      protocol: TCP
    - port: 30333
      name: custom-port
      targetPort: 30333
      protocol: TCP
    - port: 9933
      name: rpc-port
      targetPort: 9933
      protocol: TCP   
  type: NodePort
  selector:
    app.kubernetes.io/name: parachain-coll-02
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: public-rpc-svc
spec:
  ports:
    - port: 80
      name: websocket
      targetPort: 9944
      protocol: TCP
  type: NodePort    
  selector:
    app.kubernetes.io/name: public-rpc
